Adds cargo dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 authors = ["Gustavo Branco <guster32@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0"
-description = "Hello World application"
+description = "Hello World application with dependencies"
 repository = "https://github.com/guster32/hello-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.4"
